ExamFinal/Sujets:Traces/5-2-print_memory.trace.txt
= Host information =============================================================
$> hostname; uname -msr
e3r12p21.42.fr
Darwin 14.5.0 x86_64

$> date
Sat Aug 29 14:45:57 CEST 2015

$> gcc --version
Configured with: --prefix=/Applications/Xcode.app/Contents/Developer/usr --with-gxx-include-dir=/usr/include/c++/4.2.1
Apple LLVM version 6.1.0 (clang-602.0.53) (based on LLVM 3.6.0svn)
Target: x86_64-apple-darwin14.5.0
Thread model: posix

$> clang --version
Apple LLVM version 6.1.0 (clang-602.0.53) (based on LLVM 3.6.0svn)
Target: x86_64-apple-darwin14.5.0
Thread model: posix

= print_memory =================================================================
$> clang -Wextra -Wall -Werror print_memory.c main.c -o user_exe 
print_memory.c:58:13: error: passing 'const void' to parameter of incompatible type 'int'
                print_hex(*(addr + i));
                          ^~~~~~~~~~~
print_memory.c:39:20: note: passing argument to parameter 'nb' here
void    print_hex(int nb)
                      ^
1 error generated.

Could not compile 'user_exe'
Grade: 0

= Final grade: 0 ===============================================================
